--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,116 +1,1 @@
-{
-  "data": [
-    {
-      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
-      "name": "masterPortfolio",
-      "createdAt": "2020-03-06T16:26:54Z",
-      "url": "https://github.com/ashutosh1919/masterPortfolio",
-      "description": "🔥 The Complete Customizable Software Developer Portfolio Template which lets you showcase your work and provides each and every detail about you as Software Developer.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "Dockerfile",
-          "iconifyClass": "simple-icons:docker"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOG_vYHA",
-      "name": "explainable-cnn",
-      "createdAt": "2022-03-13T20:41:33Z",
-      "url": "https://github.com/ashutosh1919/explainable-cnn",
-      "description": "📦 PyTorch based visualization package for generating layer-wise explanations for CNNs.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOG0_8uQ",
-      "name": "react-awesome-shapes",
-      "createdAt": "2022-02-11T14:50:20Z",
-      "url": "https://github.com/ashutosh1919/react-awesome-shapes",
-      "description": "🌀 Insert Awesome Shapes into Your React Site with Ease.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOGcPKSQ",
-      "name": "neuro-symbolic-sudoku-solver",
-      "createdAt": "2021-11-26T17:56:07Z",
-      "url": "https://github.com/ashutosh1919/neuro-symbolic-sudoku-solver",
-      "description": "⚙️ Solving sudoku using Deep Reinforcement learning in combination with powerful symbolic representations.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
-    },
-    {
-      "id": "MDEwOlJlcG9zaXRvcnkzMjcyMjI5Njk=",
-      "name": "react-awesome-loaders",
-      "createdAt": "2021-01-06T06:36:41Z",
-      "url": "https://github.com/ashutosh1919/react-awesome-loaders",
-      "description": "🚀  High quality, super responsive and completely customisable Loading Animations to insert into your website with single line of code.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        }
-      ]
-    },
-    {
-      "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
-      "name": "react-liquidswipe",
-      "createdAt": "2021-01-01T08:31:51Z",
-      "url": "https://github.com/ashutosh1919/react-liquidswipe",
-      "description": "🚀 Smooth Liquid Swipe Animation to transition between different components.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        }
-      ]
-    }
-  ]
-}
+{"data":[{"id":"R_kgDOLMIW_g","name":"Portfolio","createdAt":"2024-01-31T15:23:55Z","url":"https://github.com/elviswangari/Portfolio","description":"🔥 The Complete Customizable Software Developer Portfolio Template which lets you showcase your work and provides each and every detail about you as Software Developer.","isFork":true,"languages":[{"name":"JavaScript","iconifyClass":"logos-javascript"},{"name":"CSS","iconifyClass":"logos-css-3"},{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"Dockerfile","iconifyClass":"simple-icons:docker"}]},{"id":"R_kgDOJLNGog","name":"AirBnB_clone_v2","createdAt":"2023-03-18T14:07:46Z","url":"https://github.com/elviswangari/AirBnB_clone_v2","description":"contains version 2 of AirBnB clone where there is implementation of database using mysql and  python OOP instead of the json","isFork":true,"languages":[{"name":"Python","iconifyClass":"logos-python"},{"name":"CSS","iconifyClass":"logos-css-3"},{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"Shell","iconifyClass":"simple-icons:shell"}]},{"id":"R_kgDOKSnYTw","name":"OTZ_module","createdAt":"2023-09-12T14:16:15Z","url":"https://github.com/elviswangari/OTZ_module","description":"OTZ MODULE: 🚀 A powerful solution for efficiently managing data of Children and Adolescents Living with HIV (CALHIV). Built with Express, Node.js, MongoDB, and Redis, featuring a React frontend. Follows an MVC structure for a scalable backend. Simplify CALHIV data handling with real-time updates and user-friendly interfaces. 🌐📊","isFork":false,"languages":[{"name":"JavaScript","iconifyClass":"logos-javascript"}]},{"id":"R_kgDOKPTIJw","name":"quote_generator","createdAt":"2023-09-04T17:25:41Z","url":"https://github.com/elviswangari/quote_generator","description":"Quote Generator: ✨ Create daily inspiration with this simple quote generator. Built using vanilla JavaScript, HTML, and CSS, this project delivers a clean and intuitive interface to generate and share thought-provoking quotes. Bring positivity to your day with a click! 🌟📜","isFork":false,"languages":[{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"JavaScript","iconifyClass":"logos-javascript"},{"name":"CSS","iconifyClass":"logos-css-3"}]},{"id":"R_kgDOKPq6aA","name":"alx-files_manager","createdAt":"2023-09-05T14:20:38Z","url":"https://github.com/elviswangari/alx-files_manager","description":null,"isFork":false,"languages":[{"name":"JavaScript","iconifyClass":"logos-javascript"}]},{"id":"R_kgDOJL3nIA","name":"nvim","createdAt":"2023-03-20T11:15:02Z","url":"https://github.com/elviswangari/nvim","description":"📚 A Neovim config designed from scratch to be understandable","isFork":true,"languages":[]}]}
