--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "masterPortfolio",
+  "name": "Portfolio",
   "homepage": ".",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
