--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,10 +6,12 @@ on:
     branches:  
     - master
     - releases/*
+    - main
   pull_request:
     branches:
     - master
     - releases/*
+    - main
 
 jobs:
   build:
@@ -18,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x, 12.x, 16.x]
 
     steps:
     - uses: actions/checkout@v2
