--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "Portfolio",
-  "homepage": ".",
+  "homepage": "https://elviswangari.netlify.app",
   "version": "2.0.0",
   "scripts": {
     "build": "react-scripts build",
