--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 13.x, 16.x]
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v2
